fixed some css... I'll re-write the javascript that adjusted the height of everything that someone deleted.  Stop trying to steal the verticalspace, there's no reason to waste 200 fucking pixels of header and whitespace.

--- a/app/assets/stylesheets/competition.css.scss
+++ b/app/assets/stylesheets/competition.css.scss
@@ -4,17 +4,15 @@
 }
 
 #challengeDescription{
-    margin-bottom: 0;
-    max-height: 324px;
+    margin-bottom: 20px;
     overflow-y: auto;
     margin-top: -51px;
-    min-height: 324px;
 }
 
 .competition-div {
   max-width: 1000px;
   padding: 30px 0px 30px 40px;
-  margin: 60px auto 60px;
+  margin: 15px auto 5px;
   background-color: #727375;
   border: 1px solid #e5e5e5;
   -webkit-border-radius: 5px;
